--- a/frontend/src/components/SearchFilterBar/SearchFilterBar.scss
+++ b/frontend/src/components/SearchFilterBar/SearchFilterBar.scss
@@ -3,7 +3,7 @@
 @use '@carbon/type';
 
 .search-filter-bar {
-    background-color: white;
+    background-color: var(--#{vars.$bcgov-prefix}-layer-02);
     position: relative;
     padding: 11px 16px;
 }
